<resources>
    <string name="app_name">GB_Notes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="HeadingHint">Heading</string>
    <string name="dateHint">date</string>
    <string name="note_text_hint">Note text</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search">search</string>
    <string name="settings">Settings</string>
    <string name="noteadd">Add note</string>
    <string name="navigation">Navigation</string>
    <string name="application_info">Application Info</string>
    <string name="notes_list">Notes List</string>
    <string name="card_index_view">Index</string>
    <string name="card_heading_text">Heading</string>
    <string name="card_date_text">Date</string>
    <string name="card_note_preview_text">NotePreview</string>
    <string name="app_info_heading">Application information</string>
    <string name="settings_heading_text">Settings</string>
    <string name="settings_night_mode_text">Night Mode</string>
    <string name="settings_or_lock_text">Orientation lock</string>
    <string name="updateNote">Update note</string>
    <string name="delete">Delete note</string>
    <string name="deletion_warning_dialog">Are you sure you want to permanently delete this note?</string>
    <string name="deletion_warning_Yes">Yes</string>
    <string name="deletion_warning_No">No</string>
</resources>