<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.AddNoteFragment">

    <TextView
        android:id="@+id/textNoteIndex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/index_size"
        android:textStyle="bold"
        android:inputType="number"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textNoteHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/HeadingHint"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="@dimen/heading_text_size"
        android:textStyle="bold" />

    <DatePicker
        android:id="@+id/textNoteDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:textSize="@dimen/date_text_size" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textNoteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textSize="@dimen/note_text_size"
        android:inputType="textMultiLine"
        android:hint="@string/note_text_hint"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSaveNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:backgroundTint="@color/save_button_color"
        android:text="@string/save"
        android:textColor="@color/save_button_text_color"
        android:textSize="@dimen/heading_text_size"
        app:cornerRadius="20dp" />

</LinearLayout>