<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.DialogNoteFragment">

    <TextView
        android:id="@+id/deletion_warning_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/card_index_text_size"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/deletion_warning_dialog"
        android:layout_gravity="top"
        android:layout_marginBottom="@dimen/dialog_elements_margin"
        android:layout_marginTop="@dimen/dialog_elements_margin"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonNo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:backgroundTint="@color/dialog_button_color"
            android:text="@string/deletion_warning_No"
            android:textColor="@color/save_button_text_color"
            android:textSize="@dimen/heading_text_size"
            app:cornerRadius="@dimen/dialog_button_corner_radius"
            android:layout_marginEnd="@dimen/dialog_button_margin"
            android:layout_weight="3"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonYes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:backgroundTint="@color/dialog_button_color"
            android:text="@string/deletion_warning_Yes"
            android:textColor="@color/save_button_text_color"
            android:textSize="@dimen/heading_text_size"
            app:cornerRadius="@dimen/dialog_button_corner_radius"
            android:layout_marginStart="@dimen/dialog_button_margin"
            android:layout_weight="2"/>

    </LinearLayout>

</LinearLayout>